Create test for register controller